안나오던 오류 수정 / 관리자 로그 (로그인,로그아웃) 기능 활성화 비활성화 추